<resources>
    <string name="app_name">麒麟单车</string>
    <string name="recharge">押金充值</string>
    <string name="tip2">车费不在押金内扣除，需另外缴费</string>
    <string name="tip1">押金可原路返回</string>
    <string name="weixin">微信</string>
    <string name="zhifubao">支付宝</string>
    <string name="balance_paid">余额支付</string>
    <string name="tip">押金（98元）</string>
    <string name="toCharge">充押金</string>
    <string name="goToDeposit">去充值</string>
    <string name="title">提示</string>
    <string name="tipThere">押金退款</string>
    <string name="tipFour">充押金</string>
    <string name="title_recharge">押金充值</string>
    <string name="instructions">麒麟单车使用说明</string>
    <string name="share_title">麒麟单车</string>
    <string name="people_center">个人中心</string>
    <string name="unlocking">扫码开锁</string>
    <string name="mobile_tip_one">原手机号退押金(1–7个工作日到帐)</string>
    <string name="mobile_tip_two">更换手机号，登录重新交押金</string>
    <string name="mobile_tip_there">车费余额，行程等信息不变</string>
    <string name="mobile_title">手机号</string>
    <string name="cash_pledge">98</string>
    <string name="cash_pledge_num">98元</string>
    <string name="findTrouble">发现车辆故障</string>
    <string name="scan_tips">扫描二维码或者手动输入编码</string>
    <string name="scan_tip_one">重新扫码或输入</string>
    <string name="option_one">二维码脱落</string>
    <string name="option_two">把套歪了</string>
    <string name="option_there">车铃丢了</string>
    <string name="option_four">踏板坏了</string>
    <string name="option_five">龙头歪斜</string>
    <string name="option_six">刹车失灵</string>
    <string name="option_seven">车座损坏</string>
    <string name="hint">请拍摄违规停车的照片含周围环境</string>
    <string name="upload">提交</string>
    <string name="myMessage">我的消息</string>
    <string name="inviteFriends">邀请好友</string>
    <string name="inviteTipTwo">来一场说走就走的麒行之旅</string>
    <string name="inviteTipOne">邀请好友一起骑行</string>
    <string name="inviteShare">分享到</string>
    <string name="guide_tips">立刻体验</string>
    <string name="to_identity">去认证</string>
    <string name="phone_verification">手机验证</string>
    <string name="unlock_fare">关锁不结束计费</string>
    <string name="feedback_detail">反馈详情</string>
    <string name="ride_result">骑行结束页</string>
    <string name="bike_service_regulations">用车服务条例</string>
    <string name="realName_identity_title">实名认证</string>
    <string name="identity_tip_one">请输入姓名</string>
    <string name="indetity_tip_two">请输入身份证号</string>
    <string name="company_mail">ditek@ditek.com.cn</string>
    <string name="email">电子邮箱</string>
    <string name="company_phone">4006606215</string>
    <string name="phone">联系电话</string>
    <string name="weixinpublic">微信公众号</string>
    <string name="about_us">关于我们</string>
    <string name="qilinbikes">麒麟单车</string>
    <string name="publicity">绿色出行，麒乐无穷</string>
    <string name="company_name">北京迪辰创和科技有限责任公司</string>
    <string name="my_wallet">我的钱包</string>
    <string name="expenditure">骑行花费</string>
    <string name="my_favorable">我的优惠</string>
    <string name="my_journey">我的行程</string>
    <string name="my_card_voucher">我的卡券</string>
    <string name="my_red_packet">我的红包</string>
    <string name="my_coupon">我的优惠</string>
    <string name="my_message">我的消息</string>
    <string name="my_credit_intergral">我的信用</string>
    <string name="invite_friends">邀请好友</string>
    <string name="user_guide">用户指南</string>
    <string name="setting">设置</string>
    <string name="user_agreement">用户协议</string>
    <string name="recharge_agreement">充值协议</string>
    <string name="cumulative_cycling">累计骑行(公里)</string>
    <string name="saving_carbon_emissions">节约碳排放(千克)</string>
    <string name="sports_achievement">运动成就(大卡)</string>
    <string name="set_address">输入常用地址</string>
    <string name="cancel">取消</string>
    <string name="no_result">未找到结果</string>
    <string name="refund_result">退款结果</string>
    <string name="refund_tip_two">退款将在1–7个工作日内到账</string>
    <string name="verify">确认</string>
    <string name="refund_success_tip">申请退款成功</string>
    <string name="question_describe">补充问题描述</string>
    <string name="unlock">开不了锁</string>
    <string name="open">打开手电筒</string>
    <string name="close">关闭手电筒</string>
    <string name="capture_tips">对准车上的二维码</string>
    <string name="manual_input">输入单车编号</string>
    <string name="my_location">我的位置</string>
    <string name="authen_ok">注册完成</string>
    <string name="person_info">个人信息</string>
    <string name="recharge_bike_fare">车费充值</string>
    <string name="unlock_progress">扫码开锁</string>
    <string name="usual_address">常用地址</string>
    <string name="cancel_tip">每天可预约5次，确认要取消吗?</string>
    <string name="cancel_title">取消预约</string>
    <string name="transaction_tip">您还没有充值，去充值吧</string>
    <string name="refund_instructions">退款说明</string>
    <string name="transaction_detail">明细</string>
    <string name="customer_service">客户服务</string>
    <string name="refund_tips">押金退还时间为1–7个工作日，在此期间您的账号将无法用车。是否仍然退押金？</string>
    <string name="refund_cash_pledge">退押金</string>
    <string name="journey_detail">行程详情</string>
    <string name="ride_disance">骑行距离</string>
    <string name="consumption">热量消耗</string>
    <string name="cashPledge_explain">押金说明</string>
    <string name="coupon_explain">优惠券规则</string>
    <string name="transport_regulations">《用车服务条例》</string>
    <string name="login_tip">点击-确定，即表示已阅读并同意</string>
    <string name="recharge_bike_fare_tips">麒麟不会以任何形式要求您输入银行账户和密码</string>
    <string name="recharge_bike_fare_tip_two">点击充值，即表示您已阅读并同意</string>
    <string name="log_out">退出登录</string>
    <string name="check_update">检查新版本</string>
    <string name="usually_address">常用地址</string>
    <string name="docking_stations">停车点</string>
    <string name="docking_stations_desc">麒麟单车不需要固定的车桩，请将单车停放在路边公共停车区域内，方便他人取用</string>
    <string name="appointment_billing">预约与计费</string>
    <string name="appointment_billing_desc">在地图上点击您想要的单车即可预约，预约车辆为您保留10分钟。开锁开始计费</string>
    <string name="help_unlock">开锁帮助</string>
    <string name="help_unlock_desc">在麒麟单车的车把和车锁上都印有二维码，只需要用手机扫码，车锁会自动打开</string>
    <string name="open_lock">如何关锁</string>
    <string name="open_lock_desc">手动关锁完成还车，结束计费(结费或受网络影响，稍等即可)</string>
    <string name="customerService">客户服务</string>
    <string name="customerServicedesc">寻找客服帮助、举报违停或发现故障车，请点击首页右下角客服图标</string>
    <string name="login_immediately">立即登录</string>
    <string name="_1">1.观察车锁是否亮灯</string>
    <string name="_2">1.提示单车处于故障中，请换其他麒麟单车</string>
    <string name="_3">2.提示您再次尝试开锁或者超时</string>
    <string name="_1_tip">如果车锁蓝灯亮起，代表这辆车已经被预约，请换其他麒麟单车使用</string>
    <string name="_2_tip">当前提示下，该辆单车可能处于故障中，正在等待维修人员前往维修。请换其他麒麟单车使用。</string>
    <string name="_3_tip">多次尝试仍开锁失败，请描述现象并提交，麒麟单车会因您的关怀越变越好</string>
    <string name="coupon_tip">没有可用优惠券</string>
    <string name="red_packet_tip">没有红包</string>
    <string name="journey_cost">行程总费用</string>
    <string name="ride_time">骑行时间</string>
    <string name="from_deposit">押金充值</string>
    <string name="cell_phone_number">手机号</string>
    <string name="cell_phone_tip">请输入手机号</string>
    <string name="security_code">验证码</string>
    <string name="security_code_tip">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="ensure">确定</string>
    <string name="change_cell_phone_number">更换手机号</string>
    <string name="cell_phone_number_new">请输入新的手机号</string>
    <string name="recharge_deposit_tip">骑行单车需支付押金，押金可退还</string>
    <string name="coupon_tip_two">网络无法访问，请检查网络连接</string>
    <string name="my_journey_tips">您还没有骑行记录，快来体验吧</string>
    <string name="riding_order_tip">手动关锁即可结束计费</string>
    <string name="riding_order_tip_two">关锁未结费？</string>
    <string name="no_network_tip">网络无法访问，请检查网络连接</string>
    <string name="input_tip">请输入车辆编号！</string>
    <string name="server_tip">服务正忙，请稍后再试！</string>
    <string name="no_has_bikeNo">该车辆编号不存在，请重新输入！</string>
    <string name="forced_to_logoff">您的账号在其他设备上登录，您被迫下线！</string>
    <string name="trouble">我是故障车！</string>
    <string name="preengaged">我已经被预约！</string>
    <string name="transaction_tip_two">交易成功</string>
    <string name="inputbikefare_tip">请选择你真实的用车费用</string>
    <string name="uploadimage_tip">上传照片</string>
    <string name="question_input_tip">请描述遇到的问题和建议</string>
    <string name="_0_5">0.5元</string>
    <string name="_1_0">1.0元</string>
    <string name="_1_5">1.5元</string>
    <string name="_2_0">2.0元</string>
    <string name="_2_5">2.5元</string>
    <string name="_3_0">3.0元</string>
    <string name="feedbacktime">反馈时间</string>
    <string name="feedbackcost">你选择的用车费用</string>
    <string name="costnum">0.5元</string>
    <string name="_123456">123456</string>
    <string name="time">2017–06–09 21:21</string>
    <string name="feedbackshowTip">关锁不结束计费</string>
    <string name="callphone">联系人工客服</string>
    <string name="exercise_burns">运动燃烧</string>
    <string name="being_used">正在用车</string>
    <string name="estimated_cost">预计费用</string>
    <string name="go_biking">去骑车</string>
    <string name="congratulation">恭喜您注册成功!</string>
    <string name="_100">信用积分 100</string>
    <string name="official_website">官方网站</string>
    <string name="_70bikes_cn">70bikes.cn</string>
    <string name="nickName">昵称</string>
    <string name="save">保存</string>
    <string name="CircleFriends">微信朋友圈</string>
    <string name="qq">QQ好友</string>
    <string name="qq_zone">QQ空间</string>
    <string name="sina">微博</string>
    <string name="bikeNum">自行车编号：</string>
    <string name="min">骑行时间(min)</string>
    <string name="km">骑行距离(km)</string>
    <string name="kcal">卡路里(kCal)</string>
    <string name="chagePhoneNum">更换手机号</string>
    <string name="_11111111111">您当前的手机号为11111111111</string>
    <string name="no_msg">还没有什么消息哦</string>
    <string name="head_portrait">头像</string>
    <string name="sample">加油</string>
    <string name="name">姓名</string>
    <string name="nameSample">中国</string>
    <string name="realNameAuthentication">实名认证</string>
    <string name="authenticated">已认证</string>
    <string name="cellphone">手机号</string>
    <string name="cellphoneSample">111****1111</string>
    <string name="recharge_amount">充值金额</string>
    <string name="_1_00">￥5.00</string>
    <string name="_5_00">￥10.00</string>
    <string name="_10_00">￥20.00</string>
    <string name="_20_00">￥30.00</string>
    <string name="_50_00">￥50.00</string>
    <string name="_100_00">￥100.00</string>
    <string name="money">金额</string>
    <string name="trade_detail">明细</string>
    <string name="balance">车费余额(元)</string>
    <string name="trade">充值</string>
    <string name="_0">押金0元</string>
    <string name="recharge_deposit">充押金</string>
    <string name="_00">0</string>
    <string name="set_usual_address">设置常用地址</string>
    <string name="usually_address_1">常用地址1</string>
    <string name="usually_address_2">常用地址2</string>
    <string name="hot_topics">热点问题</string>
    <string name="problem_finding">发现车辆故障</string>
    <string name="deposit_instructions">押金说明</string>
    <string name="recharge_instructions">充值说明</string>
    <string name="reporting_illegal_parking">举报违停</string>
    <string name="whole_problem">全部问题</string>
    <string name="inputBikeNo">输入编号开锁</string>
    <string name="usinghelp">使用帮助</string>
    <string name="input_tips">若因输错自行车编号造成自行车丢失，您将承担相应的赔偿责任</string>
    <string name="qilin_coupon">麒麟单车骑行券</string>
    <string name="couponNo">编号：</string>
    <string name="_091700001">091700001</string>
    <string name="time_100">100</string>
    <string name="_10">10</string>
    <string name="_400">400</string>
    <string name="_123">123</string>
    <string name="kirin_public">麒麟共享单车</string>
    <string name="openLock">扫码开锁</string>
    <string name="needHelp">需要帮助</string>
    <string name="book_bike">预约用车</string>
    <string name="complete_register">完成注册即可骑单车</string>
    <string name="login_biking">立即登录即可骑单车</string>
    <string name="sorry_no_result">抱歉，未找到结果</string>
    <string name="_2017_02_22_17_00">2017-02-22 17:00</string>
    <string name="trade_1">1元</string>
    <string name="cash_packet">现金红包</string>
</resources>