<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:divider="@drawable/divider"
              android:orientation="vertical"
              android:showDividers="middle"
              tools:context="com.dcch.sharebike.moudle.user.fragment.OtherQuestionFragment">


    <TextView
        android:id="@+id/foundFaulty"
        style="@style/setting_style"
        android:text="@string/findTrouble"/>

    <!--开不了锁-->
    <TextView
        android:id="@+id/unlock"
        style="@style/setting_style"
        android:text="@string/unlock"/>

    <!--用户协议-->

    <TextView
        android:id="@+id/FuserAgreement"
        style="@style/setting_style"
        android:text="@string/user_agreement"/>

    <!--押金说明-->

    <TextView
        android:id="@+id/FcashPledgeExplain"
        style="@style/setting_style"
        android:text="@string/cashPledge_explain"/>

    <!--充值协议-->

    <TextView
        android:id="@+id/FrechargeAgreement"
        style="@style/setting_style"
        android:text="@string/recharge_agreement"/>

</LinearLayout>
