<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:divider="@drawable/divider"
              android:orientation="vertical"
              android:showDividers="middle"
              tools:context="com.dcch.sharebike.moudle.user.activity.SettingActivity">

    <include layout="@layout/toolbar"/>


    <TextView
        android:id="@+id/checkVersions"
        style="@style/setting_style"
        android:text="@string/check_update"/>

    <!--消息-->

    <TextView
        android:id="@+id/aboutUs"
        style="@style/setting_style"
        android:text="@string/about_us"/>

    <!--用户协议-->

    <TextView
        android:id="@+id/userAgreement"
        style="@style/setting_style"
        android:text="@string/user_agreement"/>


    <!--用户指南-->

    <TextView
        android:id="@+id/cashPledgeExplain"
        style="@style/setting_style"
        android:text="@string/cashPledge_explain"/>

    <!--设置-->
    <TextView
        android:id="@+id/rechargeAgreement"
        style="@style/setting_style"
        android:text="@string/recharge_agreement"/>

    <Button
        android:id="@+id/signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorTitle"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="16sp"/>


</LinearLayout>
