<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dcch.sharebike.moudle.user.activity.MobileNumActivity">

    <include layout="@layout/toolbar"/>

    <ImageView
        android:id="@+id/mobile_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/mobile_phone_ic"/>

    <TextView
        android:id="@+id/phone_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/_11111111111"
        android:textColor="#000000"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tip_one"
        style="@style/mobile_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_show"
        android:layout_marginTop="25dp"
        android:text="@string/mobile_tip_one"/>

    <TextView
        android:id="@+id/tip_two"
        style="@style/mobile_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tip_one"
        android:layout_below="@+id/tip_one"
        android:text="@string/mobile_tip_two"/>

    <TextView
        style="@style/mobile_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tip_one"
        android:layout_below="@+id/tip_two"
        android:text="@string/mobile_tip_there"/>

    <Button
        android:id="@+id/replace_mobile_num"
        android:textSize="14sp"
        android:textColor="@color/common"
        android:text="@string/chagePhoneNum"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
