<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.dcch.sharebike.moudle.user.activity.PersonInfoActivity">

    <include layout="@layout/toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <!--头像-->
        <RelativeLayout
            android:id="@+id/userIcon"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/head_portrait"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userInfoIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/fuhao"
                android:src="@mipmap/avatar_default_login"/>

            <TextView
                android:id="@+id/fuhao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/forward"
                android:padding="10dp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="2dp"
            android:background="@color/lineColor"/>
        <!--昵称-->
        <RelativeLayout
            android:id="@+id/userNickname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickName"/>

            <TextView
                android:id="@+id/nickName"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="2dp"
            android:background="@color/lineColor"/>
        <!--姓名-->
        <RelativeLayout
            android:id="@+id/userRealName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/realName"
                style="@style/text_other_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameSample"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="2dp"
            android:background="@color/lineColor"/>
        <!--实名认证-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realNameAuthentication"/>

            <TextView
                android:id="@+id/authority"
                style="@style/text_other_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authenticated"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="2dp"
            android:background="@color/lineColor"/>
        <!--手机号-->
        <RelativeLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cellphone"/>

            <TextView
                android:id="@+id/telephone"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cellphoneSample"/>
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
