<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/pack_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/cash_packet"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/receiveTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pack_style"
        android:layout_below="@+id/pack_style"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/_2017_02_22_17_00"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/receiveNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:text="@string/trade_1"
        android:textColor="@color/colorTitle"
        android:textSize="20sp"/>

</RelativeLayout>